<resources>
    <string name="app_name">Recipe Generator Application</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_login_activirt">LoginActivirt</string>
    <string name="main_greeting">Let\'s Find a Recipe!</string>
    <string name="by_name">Search by Name</string>
    <string name="by_ingredients">Search by Ingredients</string>
    <string name="saved_recipe">Saved Recipes</string>
    <string name="recipe_history">Recipe History</string>
    <string name="tip_of_the_day">TIP OF THE DAY\nIf your soups and sauces are too watery,\ntry adding a few instant potato flakes \nas a thickener!</string>
    <string name="login_title">Login</string>
    <string name="register_button">REGISTER</string>
    <string name="recipe_name">Enter Recipe Name</string>
    <string name="input_recipe_name" />
    <string name="recipe_name_message">Enter Recipe Name</string>
    <string name="recipe_name_input_box" />
    <string name="search_name">Search</string>
    <string name="recipe_autofill">recipe</string>
    <string name="input_ingredients_message">Enter Ingredients</string>
    <string name="hint_user_input_recipe_name">recipe name</string>
    <string name="selected_recipe_title" />
    <string name="selcted_recipe_photo" />
    <string name="selected_recipe_id" />
    <string name="selected_recipe_instructions" />
    <string name="selected_recipe_photo" />
    <string name="selected_recipe_ingredients" />
    <string name="recipe_ingredients_input_box" />
    <string name="recipe_ingredients_message" />
    <string name="ingredients_input_box_hint">eggs,flour,sugar</string>
    <string name="enter_ingredients_message">Enter Ingredients</string>
    <string name="button_search_ingredients">SEARCH</string>
    <string name="ingredientTitle">Ingredients</string>
    <string name="preparationTitle">Preparation</string>
    <string name="ingredient1">Ingredient 1</string>
    <string name="ingredient2">Ingredient 2</string>
    <string name="ingredient3">Ingredient 3</string>
    <string name="ingredient_4">Ingredient 4</string>
    <string name="ingredient_5">Ingredient 5</string>
    <string name="cuisine123" />
    <string name="cuisine">cuisine</string>
    <string name="exclude_gluten">exclude gluten</string>
    <string name="exclude_dairy">exclude dairy</string>
    <string name="one_serving">1 serving</string>
    <string name="exclude_peanut">exclude peanut</string>
    <string name="input_name_message">Enter Recipe Name</string>
    <string-array name="cuisines">
        <item>Cajun</item>
        <item>Caribbean</item>
        <item>Chinese</item>
        <item>French</item>
        <item>Greek</item>
        <item>Indian</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Mexican</item>
        <item>Thai</item>
        <item>Vietnamese</item>
    </string-array>
</resources>